# btr_rental

./: .dockerignore  .envexample  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  celerybeat-schedule  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: tests&style.yml
btr/: asgi.py  celery.py  context_processors.py  emails.py  fixtures_loader.py  mixins.py  orm_utils.py  settings.py  test_init.py  urls.py  views.py  vk.py  wsgi.py
btr/auth/: admin.py  apps.py  auth_backends.py  forms.py  models.py  tasks.py  urls.py  views.py
btr/bookings/: admin.py  apps.py  bot.py  bot_exceptions.py  bot_handlers.py  bot_validators.py  db_handlers.py  forms.py  locale.py  models.py  service.py  signals.py  tasks.py  time_handler.py  urls.py  validators.py  views.py
btr/reviews/: apps.py  urls.py  views.py
btr/tasks/: admin.py  book_tasks.py  bookings.py  reg_tasks.py  users.py
btr/templates/: advantages.html  auth_form.html  base.html  cards.html  carousel.html  confirm_code_form.html  contacts.html  footer.html  form.html  gallery.html  guest_modal.html  ico_block.html  index.html  messages.html  navbar.html  password_reset_form.html  pictures.html  routes_carousel.html  video.html
btr/templatetags/: contrib_extras.py
btr/tg_bot/: bot.py
btr/users/: admin.py  apps.py  forms.py  models.py  service.py  signals.py  tasks.py  urls.py  views.py
btr/workhours/: admin.py  apps.py  models.py  signals.py
config/: btr.conf  gunicorn.conf.py  nginx.conf  settings.py
req/: dev.txt  prod.txt
(+155 files in other folders)
